[package]
name = "rust-functions"
version = "0.1.0"
edition = "2024"
description = "A collection of Rust utility functions (starting with format_number)."
license = "MIT"
repository = "https://github.com/PeterCullenBurbery/rust-functions"
homepage = "https://github.com/PeterCullenBurbery/rust-functions"
documentation = "https://docs.rs/rust-functions"
readme = "README.md"
keywords = ["utility", "formatting", "numbers", "rust"]
categories = ["text-processing", "value-formatting"]

[dependencies]